[tool.poetry]
name = "video-editting-tool"
version = "0.1.0"
description = ""
authors = ["Mathias Minacapilli <mathiasminacapilli@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
